GNOME Bugzilla – Bug 678468
ephy-notebook: fix the property enabling tabs visibility
Last modified: 2012-06-20 11:38:18 UTC
Right now, "show-tabs" is unused and also clashes with GtkNotebook's "show-tabs".
Created attachment 216817 [details] [review] ephy-notebook: fix the property enabling tabs visibility Replace the redundant and unused "show-tabs" with "tabs-allowed", and allow its use to ultimately hide the tabs, regardless of the policy, whenever the application UI deems necessary.
Review of attachment 216817 [details] [review]: Looks good to me.
Attachment 216817 [details] pushed as bc1be97 - ephy-notebook: fix the property enabling tabs visibility