ephy-notebook: fix the property enabling tabs visibility

Replace the redundant and unused "show-tabs" with "tabs-allowed", and
allow its use to ultimately hide the tabs, regardless of the policy,
whenever the application UI deems necessary.

https://bugzilla.gnome.org/show_bug.cgi?id=678468